hack/e2e/fake-fleet-crds.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: memberclusters.cluster.kubernetes-fleet.io
spec:
  group: cluster.kubernetes-fleet.io
  names:
    kind: MemberCluster
    plural: memberclusters
    singular: membercluster
  scope: Cluster
  versions:
  - name: v1beta1
    served: true
    storage: true
    schema:
      openAPIV3Schema:
        type: object
        x-kubernetes-preserve-unknown-fields: true
---
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: resourceplacements.placement.kubernetes-fleet.io
spec:
  group: placement.kubernetes-fleet.io
  names:
    kind: ResourcePlacement
    plural: resourceplacements
    singular: resourceplacement
  scope: Namespaced
  versions:
  - name: v1
    served: true
    storage: true
    subresources:
      status: {}
    schema:
      openAPIV3Schema:
        type: object
        x-kubernetes-preserve-unknown-fields: true
---
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: clusterresourceplacements.placement.kubernetes-fleet.io
spec:
  group: placement.kubernetes-fleet.io
  names:
    kind: ClusterResourcePlacement
    plural: clusterresourceplacements
    singular: clusterresourceplacement
  scope: Cluster
  versions:
  - name: v1
    served: true
    storage: true
    subresources:
      status: {}
    schema:
      openAPIV3Schema:
        type: object
        x-kubernetes-preserve-unknown-fields: true
